--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -33,7 +33,7 @@
       color: var(--color-grey-light-4);
     }
   }
-  &__input:focus + &__button {
+  &__input:focus+&__button {
     background-color: var(--color-grey-light-3);
   }
   &__button {
@@ -57,14 +57,14 @@
   align-self: stretch;
   display: flex;
   align-items: center;
-  & > * {
+  &>* {
     padding: 0 2rem;
     cursor: pointer;
     height: 100%;
     display: flex;
     align-items: center;
   }
-  & > *:hover {
+  &>*:hover {
     background-color: var(--color-grey-light-2);
   }
   &__icon-box {
@@ -98,20 +98,16 @@
 
 ////////////////////////////////////////
 // SIDE NAVIGATION
-
 .side-nav {
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem;
-
   &__item {
     position: relative;
-
     &:not(:last-child) {
       margin-bottom: 0.5rem;
     }
   }
-
   &__item::before {
     content: "";
     position: absolute;
@@ -121,19 +117,16 @@
     width: 3px;
     background-color: var(--color-primary);
     transform: scaleY(0);
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
-      background-color 0.1s;
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
   }
   &__item:hover::before,
   &__item--active::before {
     transform: scaleY(1);
     width: 100%;
   }
-
   &__item:active::before {
     background-color: var(--color-primary-light);
   }
-
   &__link:link,
   &__link:visited {
     color: var(--color-grey-light-1);
@@ -144,7 +137,6 @@
     position: relative;
     z-index: 10;
   }
-
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
@@ -164,7 +156,6 @@
 
 ////////////////////////////////////
 // HOTEL VIEW
-
 .gallery {
   display: flex;
   &__photo {
@@ -175,12 +166,10 @@
 
 ///////////////////////////////`
 // HOTEL OVERVIEW
-
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
-
+  border-bottom: var(--line);
   &__heading {
     font-size: 2.25rem;
     font-weight: 300;
@@ -188,28 +177,24 @@
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
   }
-
   &__stars {
     margin-right: auto;
     display: flex;
   }
-
   &__icon-star,
   &__icon-location {
     width: 1.75rem;
     height: 1.75rem;
     fill: var(--color-primary);
   }
-
   &__location {
     font-size: 1, 2rem;
     display: flex;
-    vertical-align: center;
+    align-items: center;
   }
   &__icon-location {
     margin-right: 0.5rem;
   }
-
   &__rating {
     background-color: var(--color-primary);
     margin-left: 3rem;
@@ -221,13 +206,11 @@
     justify-content: center;
     align-items: center;
   }
-
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -3px;
   }
-
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
@@ -246,12 +229,16 @@
   background-color: transparent;
   cursor: pointer;
   transition: all 0.2s;
-
+  & span {
+    margin-left: 3px;
+  }
   &:hover {
     color: var(--color-grey-dark-1);
     animation: pulsate 1s infinite;
+    span {
+      margin-left: 8px;
+    }
   }
-
   &:focus {
     outline: none;
   }
@@ -262,14 +249,187 @@
     transform: scale(1);
     box-shadow: none;
   }
-
   50% {
     transform: scale(1.05);
     box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
   }
-
   100% {
     transform: scale(1);
     box-shadow: none;
+  }
+}
+
+//////////////////////////////
+// PARAGRAPH
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+//////////////////////////////
+// LIST
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap;
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: .7rem;
+  }
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: .7rem; // Older browsers
+    // background-image: url(../img/chevron-thin-right.svg);
+    // background-size: cover;
+    // Newer browsers
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../img/chevron-thin-right.svg);
+    size: cover;
+  }
+}
+
+//////////////////////////////
+// RECOMMEND
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
+  &__count {
+    margin-right: auto;
+  }
+  &__friends {}
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+    }
+  }
+}
+
+//////////////////////////////
+// RVIEWS
+.review {
+  position: relative;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  overflow: hidden;
+  &__text {
+    margin-bottom: 2rem;
+    z-index: 10;
+    position: relative;
+  }
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+  &__user-box {
+    margin-right: auto;
+  }
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: .4rem;
+  }
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+  &__rating {
+    color: var(--color-primary);
+    font-size: 2.2rem;
+    font-weight: 300;
+  }
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+    z-index: 1;
+  }
+}
+
+//////////////////////////////
+// CALL TO ACTION
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+  &__book-now {
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+  }
+}
+
+//////////////////////////////
+// CTA BUTTON
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  border: none;
+  color: #fff;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  &>* {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all .2s;
+  }
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+  &__invisible {
+    display: inline-block;
+    position: absolute;
+    padding: 2rem 0;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: -100%;
+  }
+  &:hover{
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+  }
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+  &:hover &__invisible {
+    top: 0;
+  }
+
+  &:focus {
+    outline:none;
+    animation: pulsate 1s infinite;
   }
 }
